--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "lint": "vue-cli-service lint",
+        "production": "mix --production",
+        "serve": "vue-cli-service serve"
     },
     "devDependencies": {
+        "@vue/cli-service": "^5.0.8",
+        "@vue/compiler-sfc": "^3.2.21",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
+        "lint": "^0.7.0",
         "lodash": "^4.17.19",
         "node-sass": "^7.0.3",
         "postcss": "^8.1.14",
         "sass-loader": "^13.0.2",
-        "toast": "^0.5.4"
+        "toast": "^0.5.4",
+        "vue-loader": "^16.8.3",
+        "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
         "ant-design-vue": "^3.2.12",
         "bootstrap-icons": "^1.9.1",
         "bootstrap-vue": "^2.22.0",
