--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
+        "@meforma/vue-toaster": "^1.3.0",
         "ant-design-vue": "^3.2.12",
         "bootstrap-icons": "^1.9.1",
         "bootstrap-vue": "^2.22.0",
