--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.8",
         "prettus/l5-repository": "^2.8",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "fideloper/proxy": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
