--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue": "^3.2.39",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
+        "vue-star-rating": "^2.1.0",
         "vue-toasted": "^1.1.28",
         "vuex": "^4.0.2"
     }
