--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [ 
+            "php artisan clear-compiled",
+            "chmod -R 777 ./storage", 
+            "php artisan optimize",
+            "php artisan passport:keys"
         ]
     },
     "extra": {
@@ -66,10 +72,6 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "post-install-cmd": [ 
-        "php artisan clear-compiled",
-        "chmod -R 777 storage", 
-        "php artisan passport:keys"
-    ]
+    "prefer-stable": true
+   
 }
