--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
         "bootstrap-icons": "^1.9.1",
         "bootstrap-vue": "^2.22.0",
         "bootstrap-vue-3": "^0.3.0",
+        "chart.js": "^4.1.1",
+        "echarts": "^5.4.1",
         "js-cookie": "^2.2.1",
         "moment": "^2.25.3",
         "v-toaster": "^1.0.3",
         "vee-validate": "^4.7.3",
         "vue": "^3.2.39",
+        "vue-chartjs": "^5.1.0",
+        "vue-echarts": "^6.3.3",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
         "vue-star-rating": "^2.1.0",
