--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vue-echarts": "^6.3.3",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
+        "vue-social-sharing": "^4.0.0-alpha4",
         "vue-star-rating": "^2.1.0",
         "vue-toasted": "^1.1.28",
         "vuex": "^4.0.2"
