--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "devDependencies": {
         "@vue/cli-service": "^5.0.8",
         "@vue/compiler-sfc": "^3.2.21",
+        "autoprefixer": "^10.4.13",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lint": "^1.1.2",
         "lodash": "^4.17.19",
         "node-sass": "^7.0.3",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.21",
         "sass-loader": "^13.0.2",
+        "tailwindcss": "^3.2.4",
         "toast": "^0.5.4",
         "vue-loader": "^16.8.3",
         "vue-template-compiler": "^2.7.10"
@@ -34,7 +36,9 @@
         "chart.js": "^4.1.1",
         "echarts": "^5.4.1",
         "js-cookie": "^2.2.1",
+        "laravel-echo": "^1.14.2",
         "moment": "^2.25.3",
+        "pusher-js": "^8.0.0",
         "v-toaster": "^1.0.3",
         "vee-validate": "^2.2.15",
         "vue": "^3.2.39",
