--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
@@ -14,8 +15,8 @@
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.8",
         "prettus/l5-repository": "^2.8",
-        "tymon/jwt-auth": "^1.0",
-        "fideloper/proxy": "^4.0"
+        "pusher/pusher-php-server": "^7.2",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
