--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "aws/aws-sdk-php": "^3.257",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -13,6 +14,7 @@
         "laravel/passport": "*",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "*",
         "myclabs/php-enum": "^1.8",
         "prettus/l5-repository": "^2.8",
         "pusher/pusher-php-server": "^7.2",
@@ -33,7 +35,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/FormatHelper.php"
+            "app/Helpers/FormatHelper.php", 
+            "app/Helpers/ImageHelper.php"
         ]
     },
     "autoload-dev": {
